--- a/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.council_document.teaser.yml
@@ -27,15 +27,15 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - node_title
         - field_council_document_status
         - field_council_document_type
+        - node_title
         - field_introduced_by
         - field_bureau
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 2
         label: hidden
         formatter: default
         settings:
@@ -62,13 +62,13 @@ content:
     type: entity_reference_label
     weight: 4
     region: content
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
   field_council_document_status:
     type: entity_reference_label
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
@@ -83,7 +83,7 @@ content:
             classes: {  }
   field_council_document_type:
     type: entity_reference_label
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -100,7 +100,7 @@ content:
     type: entity_reference_label
     weight: 3
     region: content
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
@@ -110,4 +110,5 @@ hidden:
   field_commissioner_votes: true
   field_documents_and_exhibits: true
   field_efiles_link: true
+  group_content: true
   links: true
