--- a/web/sites/default/config/field.field.group.elected_official.field_address.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_address.yml
@@ -35,9 +35,19 @@ settings:
       override: hidden
     organization:
       override: optional
+    addressLine1:
+      override: optional
+    addressLine2:
+      override: optional
+    postalCode:
+      override: optional
     sortingCode:
       override: hidden
     dependentLocality:
       override: hidden
+    locality:
+      override: optional
+    administrativeArea:
+      override: optional
   fields: {  }
 field_type: address
