--- a/web/sites/default/config/core.entity_view_display.paragraph.votes.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.votes.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.votes.field_vote
     - paragraphs.paragraphs_type.votes
   module:
+    - ds
     - options
 id: paragraph.votes.default
 targetEntityType: paragraph
@@ -17,8 +18,15 @@ content:
     weight: 0
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_vote:
