POWR-453 Limit output to pages and services

--- a/web/sites/default/config/views.view.back_reference_related_content.yml
+++ b/web/sites/default/config/views.view.back_reference_related_content.yml
@@ -2,6 +2,9 @@ uuid: e346b006-be6c-4ec7-b377-bbf9c154ffcb
 langcode: en
 status: true
 dependencies:
+  config:
+    - node.type.city_service
+    - node.type.page
   module:
     - node
     - user
@@ -197,17 +200,48 @@ display:
           entity_field: title
           plugin_id: field
       filters:
-        status:
-          value: '1'
+        type:
+          id: type
           table: node_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: node
-          entity_field: status
-          id: status
-          expose:
-            operator: ''
+          field: type
+          relationship: reverse__node__field_related_content
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            page: page
+            city_service: city_service
           group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts:
         created:
           id: created
@@ -224,7 +258,7 @@ display:
           expose:
             label: ''
           granularity: second
-      title: 'Content that lists this content as related'
+      title: 'Pages and services that lists this content as related'
       header: {  }
       footer: {  }
       empty: {  }
@@ -277,6 +311,7 @@ display:
           entity_field: nid
           plugin_id: node_nid
       display_extenders: {  }
+      css_class: ''
     cache_metadata:
       max-age: -1
       contexts:
