POWR-1181 refactor group permissions

--- a/web/sites/default/config/group.role.program-member.yml
+++ b/web/sites/default/config/group.role.program-member.yml
@@ -19,9 +19,9 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:video entity'
   - 'create group_node:city_service entity'
+  - 'create group_node:development_permit entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
-  - 'create group_node:notification entity'
   - 'create group_node:page entity'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document entity'
