--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -22,6 +22,7 @@ permissions:
   - 'create group_node:city_service content'
   - 'create group_node:city_service entity'
   - 'create group_node:development_permit content'
+  - 'create group_node:development_permit entity'
   - 'create group_node:event content'
   - 'create group_node:event entity'
   - 'create group_node:news content'
@@ -41,6 +42,7 @@ permissions:
   - 'delete any group_node:city_service content'
   - 'delete any group_node:city_service entity'
   - 'delete any group_node:development_permit content'
+  - 'delete any group_node:development_permit entity'
   - 'delete any group_node:event content'
   - 'delete any group_node:event entity'
   - 'delete any group_node:news content'
