--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -19,6 +19,7 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:video entity'
   - 'create group_node:city_service entity'
+  - 'create group_node:development_permit entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:notification entity'
@@ -28,6 +29,7 @@ permissions:
   - 'delete own group_media:image entity'
   - 'delete own group_media:video entity'
   - 'delete own group_node:city_service entity'
+  - 'delete own group_node:development_permit entity'
   - 'delete own group_node:event entity'
   - 'delete own group_node:news entity'
   - 'delete own group_node:notification entity'
